--- a/style.css
+++ b/style.css
@@ -14,10 +14,69 @@
     color: white;
     padding-top: 130px;
 }
+.resume{
+    margin: auto;
+}
 
+.sub-head{
+    margin-top: 30px;
+}
+
+
+hr{
+    height: 2px;
+}
 .row{
     margin: 30px !important;
+    align-items: center;
 }
+
+.contact-img{
+    position: relative;
+    margin: 0!important;
+    padding: 0!important;
+}
+
+.contact-img img{
+    width: 100%;
+}
+
+.layer{
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+
+.layer:hover{
+    background: rgba(135,206,235 ,0.7)
+}
+
+.layer h3{
+    width: 100%;
+    font-weight: 500;
+    color: white;
+    font-size: 26px;
+    bottom: 0;
+    left: 85%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+.layer:hover h3{
+    bottom: 49%;
+    opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+   .layer h3{
+    left: 50%;
+   }
+  }
 
 .butn{
     display: inline-block;
